force-app/main/default/objects/Contact/fields/Customer_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Count__c</fullName>
    <label>Customer Count</label>
    <summaryForeignKey>Customer__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>