force-app/main/default/objects/Contact/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <displayFormat>GEN-{0000}</displayFormat>
    <label>Customer No</label>
    <type>AutoNumber</type>
</CustomField>